--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,7 +7,7 @@ main:
     pdf: https://arxiv.org/pdf/2306.00988.pdf
     code: https://github.com/MrGiovanni/ContinualLearning
     bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/teaser_example_2.png
+    image: ./assets/img/Figure2.png
     notes: Haven't Submit
 
   - title: Flash memory chips based on WSe2/WS2 heterojunctions
@@ -19,4 +19,4 @@ main:
     page: https://class-il.mpi-inf.mpg.de/mnemonics/
     bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
     notes: Haven't Submit
-    image: ./assets/img/teaser_example.png
+    image: ./assets/img/Figure1.png
