--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title: Sixie Chen
 position: Undergraduate Student
 affiliation: Tsinghua University
-email: chensx22@mails.tsinghua.edu.cn
+email-1: chensx22@mails.tsinghua.edu.cn
+email-2: sixiechen@outlook.cn
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
@@ -14,9 +15,9 @@ canonical: https://minimal-light-theme.yliu.me/
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/
 cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/
+github_link: https://github.com/SixieChen
 linkedin: https://www.linkedin.com/
-twitter: https://twitter.com/
+twitter: https://x.com/xirius__/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
