--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ position: Undergraduate Student
 affiliation: Tsinghua University
 email-1: chensx22@mails.tsinghua.edu.cn
 email-2: sixiechen@outlook.cn
-CoreLine: Actively seeking PhD opportunities for Fall 2026. 
+CoreLine: Actively Seeking PhD Opportunities for Fall 2026. 
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
