--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Sixie Chen
 position: Undergraduate Student
 affiliation: Tsinghua University
 email-1: chensx22@mails.tsinghua.edu.cn
-email-2: sixiechen@outlook.cn
+email-2: sixiechen@outlook.com
 CoreLine: **Actively Seeking PhD Opportunities for Fall 2026.** 
 
 # Search Engine Optimization (SEO)
