--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,21 +1,21 @@
 main:
 
-  - title: Mutielemental Alloy Decorated Electrode for Hydrogen Production via Water Electrolysis
+  <!--- title: Mutielemental Alloy Decorated Electrode for Hydrogen Production via Water Electrolysis
     authors: Wenle Yan, Min Xu*, <strong>Sixie Chen</strong>, Di Chen* (*Corresponding authors)
     conference_short: In preparation
     conference: In preparation <strong>(Haven't submit yet)</strong>, 2024.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://sixiechen.github.io/tsinghua.edu/
     image: /assets/img/Figure6.png
-    notes: Haven't Submit
+    notes: Haven't Submit-->
 
-  - title: High temperature electrochemical reduction of carbon dioxide
+  - title: Enhancing CO2 Reduction via Cu Nanocrystals Decorated Perovskite as Cathode for Solid Oxide Electrolysis Cells
     authors: Min Xu*, Yan Lin, Xi Chen, <strong>Sixie Chen*</strong>, Di Chen* (*Corresponding authors)
-    conference_short: In preparation
-    conference:  In preparation <strong>(Haven't submit yet)</strong>, 2024.
-    pdf: https://sixiechen.github.io/tsinghua.edu/
-    page: https://sixiechen.github.io/tsinghua.edu/
-    notes: Haven't Submit
+    conference_short: Published
+    conference:  Published <strong>, 2024.
+    pdf:  https://sixiechen.github.io/tsinghua.edu/
+    page: https://www.sciencedirect.com/science/article/pii/S0272884225000410
+    notes: Published
     image: /assets/img/Figure6.png
 
   - title: High-entropy strategy to boost SOFC cathode stability
