--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -18,14 +18,14 @@ main:
     notes: Published
     image: /assets/img/Figure6.png
 
-  - title: High-entropy strategy to boost SOFC cathode stability
+   <!--- title: High-entropy strategy to boost SOFC cathode stability
     authors: <strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)
     conference_short: In preparation
     conference:  In preparation <strong>(Haven't submit yet)</strong>, 2024.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://sixiechen.github.io/tsinghua.edu/
     notes: Haven't Submit
-    image: ./assets/img/Figure3.png
+    image: ./assets/img/Figure3.png-->
 
   - title: Improvement of electrochemical performance of SOFC cathodes based on surface pH regulation
     authors: <strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)
