--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,14 +1,5 @@
 main:
 
-  <!--- title: Mutielemental Alloy Decorated Electrode for Hydrogen Production via Water Electrolysis
-    authors: Wenle Yan, Min Xu*, <strong>Sixie Chen</strong>, Di Chen* (*Corresponding authors)
-    conference_short: In preparation
-    conference: In preparation <strong>(Haven't submit yet)</strong>, 2024.
-    pdf: https://sixiechen.github.io/tsinghua.edu/
-    page: https://sixiechen.github.io/tsinghua.edu/
-    image: /assets/img/Figure6.png
-    notes: Haven't Submit-->
-
   - title: Enhancing CO2 Reduction via Cu Nanocrystals Decorated Perovskite as Cathode for Solid Oxide Electrolysis Cells
     authors: Min Xu*, Yan Lin, Xi Chen, <strong>Sixie Chen*</strong>, Di Chen* (*Corresponding authors)
     conference_short: Published
@@ -18,20 +9,11 @@ main:
     notes: Published
     image: /assets/img/Figure6.png
 
-   <!--- title: High-entropy strategy to boost SOFC cathode stability
-    authors: <strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)
-    conference_short: In preparation
-    conference:  In preparation <strong>(Haven't submit yet)</strong>, 2024.
-    pdf: https://sixiechen.github.io/tsinghua.edu/
-    page: https://sixiechen.github.io/tsinghua.edu/
-    notes: Haven't Submit
-    image: ./assets/img/Figure3.png-->
-
   - title: Improvement of electrochemical performance of SOFC cathodes based on surface pH regulation
     authors: <strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)
-    conference_short: In preparation
-    conference:  In preparation <strong>(Haven't submit yet)</strong>, 2024.
+    conference_short: Under Review
+    conference:  Under Review <strong>(Haven't submit yet)</strong>, 2024.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://sixiechen.github.io/tsinghua.edu/
-    notes: Haven't Submit
+    notes: Under Review
     image: ./assets/img/Figure4.png
