--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -6,14 +6,14 @@ main:
     conference:  Published <strong>, 2024.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://www.sciencedirect.com/science/article/pii/S0272884225000410
-    notes: Published
+    notes: Ceramics International
     image: /assets/img/Figure6.png
 
   - title: Improvement of electrochemical performance of SOFC cathodes based on surface pH regulation
     authors: <strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)
     conference_short: Under Review
-    conference:  Under Review <strong>(Haven't submit yet)</strong>, 2024.
+    conference:  Under Review <strong>(Haven't submit yet)</strong>, 2025.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://sixiechen.github.io/tsinghua.edu/
-    notes: Under Review
+    notes: ACS AMI
     image: ./assets/img/Figure4.png
