--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -4,7 +4,7 @@ main:
     authors: Min Xu*, Yan Lin, Xi Chen, <strong>Sixie Chen*</strong>, Di Chen* (*Corresponding authors)
     conference_short: Published
     conference:  Published <strong>, 2024.
-    pdf: https://sixiechen.github.io/tsinghua.edu/
+    pdf: https://www.sciencedirect.com/science/article/pii/S0272884225000410
     page: https://www.sciencedirect.com/science/article/pii/S0272884225000410
     notes: Ceramics International
     image: /assets/img/Figure6.png
