--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -3,7 +3,7 @@ main:
   - title: Enhancing CO2 Reduction via Cu Nanocrystals Decorated Perovskite as Cathode for Solid Oxide Electrolysis Cells
     authors: Min Xu*, Yan Lin, Xi Chen, <strong>Sixie Chen*</strong>, Di Chen* (*Corresponding authors)
     conference_short: Published
-    conference:  Published <strong>, 2024.
+    conference:  Published, 2024.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://www.sciencedirect.com/science/article/pii/S0272884225000410
     notes: Ceramics International
