--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,17 +2,17 @@ main:
 
   - title: Enhancing CO2 Reduction via Cu Nanocrystals Decorated Perovskite as Cathode for Solid Oxide Electrolysis Cells
     authors: Min Xu*, Yan Lin, Xi Chen, <strong>Sixie Chen*</strong>, Di Chen* (*Corresponding authors)
-    conference_short: Published
-    conference:  Published, 2024.
+    conference_short: CI
+    conference:  Ceramics International <strong>(Haven't submit yet)</strong>, 2025.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://www.sciencedirect.com/science/article/pii/S0272884225000410
-    notes: Ceramics International
+    notes: Accepted
     image: /assets/img/Figure6.png
 
   - title: Improvement of electrochemical performance of SOFC cathodes based on surface pH regulation
     authors: <strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)
-    conference_short: Under Review
-    conference:  Under Review <strong>(Haven't submit yet)</strong>, 2025.
+    conference_short: ACS AMI
+    conference:  ACS advanced material and interfaces <strong>(Haven't submit yet)</strong>, 2025.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://sixiechen.github.io/tsinghua.edu/
     notes: ACS AMI
