--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -3,9 +3,8 @@ main:
   - title: Enhancing CO2 Reduction via Cu Nanocrystals Decorated Perovskite as Cathode for Solid Oxide Electrolysis Cells
     authors: Min Xu*, Yan Lin, Xi Chen, <strong>Sixie Chen*</strong>, Di Chen* (*Corresponding authors)
     conference_short: CI
-    conference:  Ceramics International <strong>(Haven't submit yet)</strong>, 2025.
+    conference: Ceramics International <strong>(CI)</strong>, 2025.
     pdf: https://sixiechen.github.io/tsinghua.edu/
-    page: https://www.sciencedirect.com/science/article/pii/S0272884225000410
     notes: Accepted
     image: /assets/img/Figure6.png
 
@@ -17,3 +16,5 @@ main:
     page: https://sixiechen.github.io/tsinghua.edu/
     notes: ACS AMI
     image: /assets/img/Figure4.png
+
+  
