--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,37 +1,18 @@
 #main:
 
- # - title: Enhancing CO2 Reduction via Cu Nanocrystals Decorated Perovskite as Cathode for Solid Oxide Electrolysis Cells
-   # authors: Min Xu*, Yan Lin, Xi Chen, <strong>Sixie Chen*</strong>, Di Chen* (*Corresponding authors)
-    #conference_short: CI
-   # conference: Ceramics International <strong>(CI)</strong>, 2025.
-    #pdf: https://sixiechen.github.io/tsinghua.edu/
-   # notes: Accepted
-   # image: /assets/img/Figure6.png
+  - title: Enhancing CO2 Reduction via Cu Nanocrystals Decorated Perovskite as Cathode for Solid Oxide Electrolysis Cells
+    authors: Min Xu*, Yan Lin, Xi Chen, <strong>Sixie Chen*</strong>, Di Chen* (*Corresponding authors)
+    conference_short: CI
+    conference: Ceramics International <strong>(CI)</strong>, 2025.
+    pdf: https://sixiechen.github.io/tsinghua.edu/
+    notes: Accepted
+    image: /assets/img/Figure6.png
 
-  #- title: Improvement of electrochemical performance of SOFC cathodes based on surface pH regulation
-  #  authors: <strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)
-  #  conference_short: ACS AMI
-  #  conference:  ACS advanced material and interfaces <strong>(Haven't submit yet)</strong>, 2025.
-   # pdf: https://sixiechen.github.io/tsinghua.edu/
-   # page: https://sixiechen.github.io/tsinghua.edu/
-    #notes: ACS AMI
-   # image: /assets/img/Figure4.png
-
-  main:
-
-  - title: "Enhancing CO2 Reduction via Cu Nanocrystals Decorated Perovskite as Cathode for Solid Oxide Electrolysis Cells"
-    authors: "Min Xu*, Yan Lin, Xi Chen, <strong>Sixie Chen*</strong>, Di Chen* (*Corresponding authors)"
-    conference_short: "CI"
-    conference: "Ceramics International <strong>(CI)</strong>, 2025."
-    pdf: "https://sixiechen.github.io/tsinghua.edu/"
-    notes: "Accepted"
-    image: "/assets/img/Figure6.png"
-
-  - title: "Improvement of electrochemical performance of SOFC cathodes based on surface pH regulation"
-    authors: "<strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)"
-    conference_short: "ACS AMI"
-    conference: "ACS Advanced Material and Interfaces <strong>(Haven't submit yet)</strong>, 2025."
-    pdf: "https://sixiechen.github.io/tsinghua.edu/"
-    page: "https://sixiechen.github.io/tsinghua.edu/"
-    notes: "ACS AMI"
-    image: "/assets/img/Figure4.png"
+  - title: Improvement of electrochemical performance of SOFC cathodes based on surface pH regulation
+    authors: <strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)
+    conference_short: ACS AMI
+    conference:  ACS advanced material and interfaces <strong>(Haven't submit yet)</strong>, 2025.
+    pdf: https://sixiechen.github.io/tsinghua.edu/
+    page: https://sixiechen.github.io/tsinghua.edu/
+    notes: ACS AMI
+    image: /assets/img/Figure4.png
