--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,4 @@
-#main:
+main:
 
   - title: Enhancing CO2 Reduction via Cu Nanocrystals Decorated Perovskite as Cathode for Solid Oxide Electrolysis Cells
     authors: Min Xu*, Yan Lin, Xi Chen, <strong>Sixie Chen*</strong>, Di Chen* (*Corresponding authors)
