--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -6,7 +6,7 @@ main:
     conference: Ceramics International <strong>(CI)</strong>, 2025.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     notes: Accepted
-    image: /assets/img/Figure6.png
+    image: /assets/img/1-s2.0-S0272884225000410-gr8_lrg.jpg
 
   - title: Improvement of electrochemical performance of SOFC cathodes based on surface pH regulation
     authors: <strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)
