--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -4,7 +4,7 @@ main:
     authors: Min Xu*, Yan Lin, Xi Chen, <strong>Sixie Chen*</strong>, Di Chen* (*Corresponding authors)
     conference_short: CI
     conference: Ceramics International <strong>(CI)</strong>, 2025.
-    pdf: https://sixiechen.github.io/tsinghua.edu/
+    pdf: https://www.sciencedirect.com/science/article/pii/S0272884225000410#fig6
     page: https://www.sciencedirect.com/science/article/pii/S0272884225000410#fig6
     notes: Accepted
     image: /assets/img/1-s2.0-S0272884225000410-gr8_lrg.jpg
