--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -15,5 +15,5 @@ main:
     conference: ACS applied material and interfaces <strong>(Under Review)</strong>, 2025.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://sixiechen.github.io/tsinghua.edu/
-    notes: ACS AMI
+    notes: Under Review
     image: /assets/img/Figure4.png
