--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -11,7 +11,7 @@ main:
 
   - title: Improvement of electrochemical performance of SOFC cathodes based on surface pH regulation
     authors: <strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)
-    conference_short: ACS AMI
+    conference_short: Submitted
     conference: ACS applied material and interfaces <strong>(Under Review)</strong>, 2025.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://sixiechen.github.io/tsinghua.edu/
