--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -16,4 +16,4 @@ main:
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://sixiechen.github.io/tsinghua.edu/
     notes: Under Review
-    image: /assets/img/Figure4.png
+    image: ./assets/img/Screenshot 2025-02-06 065118.png
