--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -12,7 +12,7 @@ main:
   - title: Improvement of electrochemical performance of SOFC cathodes based on surface pH regulation
     authors: <strong>Sixie Chen</strong>, Zixiao Wang, Min Xu*, Di Chen* (*Corresponding authors)
     conference_short: Submitted
-    conference: ACS applied material and interfaces <strong>(Under Review)</strong>, 2025.
+    conference: Ceramics International <strong>(Under Review)</strong>, 2025.
     pdf: https://sixiechen.github.io/tsinghua.edu/
     page: https://sixiechen.github.io/tsinghua.edu/
     notes: Under Review
