--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ canonical: https://minimal-light-theme.yliu.me/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=nnmO3tEAAAAJ&hl=en&oi=ao
-cv_link: assets/files/Profile_Sixie Chen_2025_2_6.docx
+cv_link: ./assets/files/Profile_Sixie Chen_2025_2_6.docx
 github_link: https://github.com/SixieChen
 linkedin: https://www.linkedin.com/
 twitter: https://x.com/xirius__/
